fix(intro): intro section text middle aligned

--- a/blocks/form/components/wizard/_wizard-intro.scss
+++ b/blocks/form/components/wizard/_wizard-intro.scss
@@ -115,4 +115,12 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  // Center aligned content
+  fieldset {
+    > fieldset {
+      // Text
+      align-items: center;
+    }
+  }
 }
